--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
         </div>
     </div>
     <!-- end of menu area -->
+    <!-- start page header -->
+    <section class="page-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="page-title">
+                        <h2><center>Home</center></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of page header -->
     <!-- start of slider area -->
     <section class="home-slider-1">
         <div class="slider-one-active owl-carousel">
